# first-rust

./: .gitignore  Cargo.toml
html_to_email/: Cargo.toml
html_to_email/src/: main.rs
html_to_email/src/cmd/: mod.rs
mq/: Cargo.toml
