[package]
name = "first-rust"
version = "0.1.0"
authors = ["gonejack <igonejack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.2"
structopt = "0.3.13"
anyhow = "1.0"
clap = "2.33.3"
getopts = "0.2.21"
switch_statement = "1.0.0"
epub-builder="0.5.0"
env_logger = "0.9.0"
log = "0.4.14"
